[gd_scene load_steps=9 format=2]

[ext_resource path="res://Object/UI/SmallPopup/SmallPopup.tscn" type="PackedScene" id=1]
[ext_resource path="res://Theme/Font/P.tres" type="DynamicFont" id=2]
[ext_resource path="res://Image/Coin.png" type="Texture" id=3]
[ext_resource path="res://Shader/DButton.shader" type="Shader" id=4]
[ext_resource path="res://Object/UI/DButton/DButton.tscn" type="PackedScene" id=5]
[ext_resource path="res://Object/UI/SmallPopup/PurchasePopup/PurchasePopup.gd" type="Script" id=6]

[sub_resource type="ShaderMaterial" id=1]
resource_local_to_scene = true
shader = ExtResource( 4 )
shader_param/node_size = Vector2( 200, 60 )
shader_param/radius = 0.25
shader_param/mouse_pos = Vector2( 0.5, 0.5 )
shader_param/circle_alpha = 1.0

[sub_resource type="ShaderMaterial" id=2]
resource_local_to_scene = true
shader = ExtResource( 4 )
shader_param/node_size = Vector2( 200, 60 )
shader_param/radius = 0.25
shader_param/mouse_pos = Vector2( 0.5, 0.5 )
shader_param/circle_alpha = 1.0

[node name="PurchasePopup" instance=ExtResource( 1 )]
rect_scale = Vector2( 1, 1e-05 )
script = ExtResource( 6 )
close_tap = 1

[node name="PanelContainer" parent="." index="0"]
margin_right = -7.62939e-06
margin_bottom = 184.0

[node name="VBoxContainer" parent="PanelContainer" index="0"]
margin_bottom = 182.0

[node name="PurchaseText" type="Label" parent="PanelContainer/VBoxContainer" index="0"]
margin_right = 116.0
margin_bottom = 28.0
custom_fonts/font = ExtResource( 2 )
text = "Purchase?"
align = 1

[node name="Cost" type="HBoxContainer" parent="PanelContainer/VBoxContainer" index="1"]
margin_top = 32.0
margin_right = 116.0
margin_bottom = 82.0
alignment = 1

[node name="CurrencyImage" type="TextureRect" parent="PanelContainer/VBoxContainer/Cost" index="0"]
margin_left = 11.0
margin_right = 61.0
margin_bottom = 50.0
texture = ExtResource( 3 )

[node name="CostText" type="Label" parent="PanelContainer/VBoxContainer/Cost" index="1"]
margin_left = 65.0
margin_top = 11.0
margin_right = 104.0
margin_bottom = 39.0
custom_fonts/font = ExtResource( 2 )
text = "Cost"
align = 1

[node name="Purchase" parent="PanelContainer/VBoxContainer" index="2" instance=ExtResource( 5 )]
material = SubResource( 1 )
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 86.0
margin_right = 116.0
margin_bottom = 131.0
rect_min_size = Vector2( 0, 45 )
custom_fonts/font = ExtResource( 2 )
text = "Buy"

[node name="Cancel" parent="PanelContainer/VBoxContainer" index="3" instance=ExtResource( 5 )]
material = SubResource( 2 )
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 135.0
margin_right = 116.0
margin_bottom = 180.0
rect_min_size = Vector2( 0, 45 )
custom_fonts/font = ExtResource( 2 )
text = "Cancel"
[connection signal="pressed" from="PanelContainer/VBoxContainer/Purchase" to="." method="_on_Purchase_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Cancel" to="." method="close_popup"]
